Fix tables causing horizontal overflow on mobile

--- a/cmd.css
+++ b/cmd.css
@@ -109,3 +109,7 @@ th, td {
   background-size: 1em;
   padding-left: 1.5em;
 }
+
+.wide {
+  overflow-x: auto;
+}
